kubernetes/apps/o11y/victoriametrics/app/httproute-alertmanager.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
    - alertmanager.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-vmetrics-victoria-metrics-k8s-stack
          port: 9093
