kubernetes/apps/o11y/victoriametrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
spec:
  hostnames:
    - vmsingle.nikola.wtf
    - vm.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-vmetrics-victoria-metrics-k8s-stack
          namespace: o11y
          port: 8428
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert
spec:
  hostnames:
    - vmalert.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalert-vmetrics-victoria-metrics-k8s-stack
          namespace: o11y
          port: 8080
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  hostnames:
    - alertmanager.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-vmetrics-victoria-metrics-k8s-stack
          namespace: o11y
          port: 9093
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmagent
spec:
  hostnames:
    - vmagent.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmagent-vmetrics-victoria-metrics-k8s-stack
          namespace: o11y
          port: 8429
